app/styles/main.css
/* ... */
.nav-progress > div.complete .arrow {
  border: 1px solid #5bc0de !important;
  background: #5bc0de !important;
}
.nav-progress > div.active {
  background-color: #5bc0de;
  color: #FFF;
}
.nav-progress > div.active .arrow {
  border: none !important;
  background: #5bc0de !important;
}

.arrow-wrapper {
  position: absolute;
  top: 0px;
  right: 0px;
}
.arrow-wrapper .arrow-cover {
  position: absolute;
  overflow: hidden;
  width: 24px;
  height: 50px;
}
.arrow-wrapper .arrow-cover .arrow {
  position: absolute;
  left: -34px;
  width: 50px;
  height: 50px;
  border: 1px solid #5bc0de;
  background: transparent;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  border-radius: 6px;
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  -o-transform: rotate(45deg);
  transform: rotate(45deg);
}

#accordion {
  margin: auto;
  width: 55%;
}

.accordion-toggle {
  cursor: pointer;
  font-size: 21px;
}

.accordion-content {
  display: none;
  text-align: left;
}

.accordion-content p {
  font-size: 14px;
}

#map {
  height: 80%;
  min-height: 25em;
  width: 100%;
  min-width: 15em;
  margin: auto;
}

img {
  width: 25%;
}

.class {
  font-size: 24px;
}

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

.form-control {
  width: 200px;
  display: inline;
  margin: 10px auto;
}

input {
  padding: 10px;
}

select {
  padding: 10px;
}

body {
  padding: 0;
  color: #6d6d6d;
}

.main-butterfly {
  width: 50%;
}

.clue {
  font-size: 1.5em;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
  margin-bottom: 0px;
  /* Make the masthead heading the same height as the navigation */
}
.header h3 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;
  padding-bottom: 19px;
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
}
.jumbotron .btn {
  font-size: 21px;
  padding: 14px 24px;
  margin-top: 14px;
  margin-left: 5px;
  margin-right: 5px;
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
}
.marketing p + h4 {
  margin-top: 28px;
}

@media screen and (max-width: 768px) {
  .container {
    max-width: 730px;
    min-height: 4.4em;
  }
}
/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  .container {
    max-width: 730px;
  }

  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }

  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }

  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}
/* The Modal (background) */
.modal {
  display: none;
  /* Hidden by default */
  position: fixed;
  /* Stay in place */
  z-index: 1;
  /* Sit on top */
  left: 0;
  top: 0;
  width: 100%;
  /* Full width */
  height: 100%;
  /* Full height */
  overflow: auto;
  /* Enable scroll if needed */
  background-color: black;
  /* Fallback color */
  background-color: rgba(0, 0, 0, 0.4);
  /* Black w/ opacity */
}

/* Modal Content/Box */
.modal-content {
  background-color: #fefefe;
  margin: 15% auto;
  /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  width: 80%;
  /* Could be more or less, depending on screen size */
}

/* The Close Button */
.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.icon {
  width: 20px;
  padding: 0;
  margin: 0;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

.links img {
  height: 3em;
  width: 3em;
}

#teamtitle, .team {
  text-align: center;
}

.pics {
  margin: 1em;
}

.headshot {
  min-width: 200px;
}

* {
  text-align: center;
}

#js-navbar-collapse {
  float: right;
}

.navbar-header {
  float: center;
}

